# game

./: .gitignore  AGENTS.md  BALANCE.md  CLAUDE.md  CMakeLists.txt  DIRECTION.md  MANUAL.md  MODDING.md  README.md  ROADMAP.md  bench.txt  build.ps1  market_test.owb
.github/workflows/: ci.yml
assets/: armor.cfg  companions.cfg  enterprises.cfg  events.cfg  factions.cfg  fonts.cfg  goods.cfg  map.cfg  settings.cfg  troops.cfg  weapons.cfg
src/: battle.cpp  bridge.h  campaign.cpp  character.cpp  content.cpp  content.h  game.h  gfx.cpp  gfx.h  harness.cpp  harness.h  input.h  main.cpp  parallel.h  registry.h  save.cpp  save.h  settings.cpp  settings.h  sfx.cpp  sfx.h  types.h  ui.cpp  ui.h  world.h
src/battle/: battle.cpp  battle.h  character.cpp  character.h
src/campaign/: campaign.cpp  campaign.h
src/town/: town.cpp  town.h
tests/: README.md  ai_fortify.txt  attrition.txt  autoresolve.txt  autosave.txt  background.txt  bank.txt  battle_size.txt  campaign_arc.txt  caravan.txt  caravan_cargo.txt  cavalry.txt  chronicle.txt  combatdir.txt  commissary.txt  companion_gear.txt  companion_voices.txt  companions.txt  couched_lance.txt  court_gift.txt  debt_collectors.txt  debt_compounds.txt  declare_war.txt  defeat_cost.txt  defection.owb  defection.txt  destrier.txt  dialogue.txt  diplomacy.txt  dismount.txt  drillmaster.txt  duel.txt  economy_desertion.txt  enterprise.txt  enterprise_expand.txt  escort_quest.txt  estate.txt  feast.txt  feast_guests.txt  fief.txt  (+97 more)
tests/fixtures/: aiwall.owb  bigband.owb  brig.owb  collect.owb  cropstorm.owb  debt.owb  diplo.owb  diplo2.owb  doom.owb  drill.owb  escort.owb  fair.owb  fortsiege.owb  halb.owb  hammer.owb  herd.owb  herdsolo.owb  herobow.owb  jailer.owb  ladder.owb  lordesc.owb  lordfall.owb  manor.owb  manor2.owb  merc.owb  near_victory.owb  night.owb  outfight.owb  outrider.owb  ownrelief.owb  parley.owb  payup.owb  poach.owb  qclock.owb  rich.owb  roaddng.owb  rope.owb  scorn.owb  shieldbro.owb  siege_praven.owb  (+2 more)
